# stm-micro-sys

./: README.md
app/: CMakeLists.txt  README.txt  cmake-arm-toolchain.cmake
app/scripts/: build.sh  deploy.sh  start-gdb-frontend.sh  start-ocd.sh
app/src/: crt0.c  main.c
corelib/linkers/: STM32-F401RE.ld
corelib/src/: base.c  base.h  ccbuff.c  ccbuff.h  clock.c  clock.h  gpio.c  gpio.h  i2c.c  i2c.h  irq.h  platform.h  platformdefs.h  serial.c  serial.h  sys.c  sys.h  uart.c  uart.h
corelib/src/drivers/: dht22.c  dht22.h  lcd_ic.c  lcd_ic.h
images/: image_01.HEIC  image_02.HEIC
